# nix-templates

./: .editorconfig  .gitignore  .mcp.json  README.md  _typos.toml  flake.nix
.claude/: settings.json
.github/: copilot-instructions.md  dependabot.yml  git-commit-instructions.md
.github/actions/setup-nix/: action.yml
.github/workflows/: check.yml  kyosei.yml  push.yml
templates/basic/: .editorconfig  .editorconfig-checker.json  .envrc  README.md  flake.nix
templates/basic/.claude/: settings.json
templates/basic/.github/: copilot-instructions.md
templates/github-action/: .editorconfig  .editorconfig-checker.json  action.yml  flake.nix
templates/github-action/.claude/: settings.json
templates/github-action/.github/: copilot-instructions.md  git-commit-instructions.md
templates/haskell-himari/: .editorconfig  .editorconfig-checker.json  .gitignore  cabal.project  flake.nix  fourmolu.yaml  haskell-project.cabal
templates/haskell-himari/.claude/: settings.json
templates/haskell-himari/.github/: copilot-instructions.md
templates/haskell-himari/.github/actions/setup-nix/: action.yml
templates/haskell-himari/.github/workflows/: check.yml  release.yml
templates/haskell-himari/app/: Main.hs
templates/haskell-himari/src/: Lib.hs
templates/haskell-himari/test/: Spec.hs
templates/haskell-himari/test/Spec/: LibSpec.hs
templates/haskell-nix-himari/: .env.deve  .gitignore  README.md  cabal.project  flake.nix  haskell-project.cabal
templates/haskell-nix-himari/.github/: copilot-instructions.md
templates/haskell-nix-himari/app/: Main.hs
templates/haskell-nix-himari/src/: Lib.hs
templates/haskell-nix-himari/test/: Main.hs  Spec.hs
templates/typescript/: .editorconfig  .envrc  README.md  _typos.toml  eslint.config.ts  flake.nix  package-lock.json  package.json  tsconfig.json  vite.config.ts
templates/typescript/.claude/: settings.json
templates/typescript/test/: index.test.ts
(+17 files in other folders)
