cabal-version: 3.12
name: haskell-project
version: 0.0.0.0
synopsis: TODO
license: NONE
author: TODO <todo@example.com>
maintainer: TODO <todo@example.com>
build-type: Simple

source-repository head
  type: git
  location: TODO

common basic
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

  default-language: GHC2024
  default-extensions:
    ApplicativeDo
    BlockArguments
    CPP
    DefaultSignatures
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LexicalNegation
    LinearTypes
    MonadComprehensions
    MultiWayIf
    NegativeLiterals
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    QualifiedDo
    QuantifiedConstraints
    QuasiQuotes
    RecordWildCards
    RecursiveDo
    StrictData
    TemplateHaskell
    TypeData
    TypeFamilies
    TypeFamilyDependencies
    ViewPatterns

library
  import: basic
  hs-source-dirs: src
  -- cabal-gild: discover ./src
  exposed-modules:
    Lib

  build-depends:
    base >=4.20.0.0 && <4.23,
    himari ^>=1.1.2.1,

executable haskell-project
  import: basic
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base,
    haskell-project,
    himari,

test-suite haskell-project-test
  import: basic
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  -- cabal-gild: discover ./test --exclude ./test/Main.hs
  other-modules:
    Spec
    Spec.LibSpec

  build-tool-depends:
    sandwich:sandwich-discover

  build-depends:
    base,
    haskell-project,
    himari,
    sandwich ^>=0.3.0.5,
